--- a/map_widget/ui/bd_map_widget.ui
+++ b/map_widget/ui/bd_map_widget.ui
@@ -189,9 +189,9 @@
    <widget class="QPushButton" name="HomeGPS_pushButton_Obtain_Point">
     <property name="geometry">
      <rect>
-      <x>40</x>
+      <x>10</x>
       <y>30</y>
-      <width>171</width>
+      <width>141</width>
       <height>25</height>
      </rect>
     </property>
@@ -265,6 +265,19 @@
     </property>
     <property name="text">
      <string>图标颜色</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="HomeGPS_pushButton_Obtain_Point_2">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>30</y>
+      <width>91</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>以点为中心</string>
     </property>
    </widget>
   </widget>
